tests/snapshots/assets__check_file@unit-grid-dense.typ-0.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/grid/dense.typ
---
#align(
  center,
  table(
    columns: 4,
    align: (
      right,
      left,
      right,
      left,
    ),
    column-gutter: (
      1em,
      1.5em,
      1em,
    ),
    [$alpha$],
    [`alpha`],
    [$xi$, $Xi$],
    [`xi`, `Xi`],

    [$beta$],
    [`beta`],
    [$omicron$],
    [`omicron`],

    [$gamma$, $Gamma$],
    [`gamma`, `Gamma`],
    [$pi$, $Pi$],
    [`pi`, `Pi`],

    [$delta$, $Delta$],
    [`delta`, `Delta`],
    [$pi.alt$],
    [`pi.alt`],

    [$epsilon.alt$],
    [`epsilon.alt`],
    [$rho$],
    [`rho`],

    [$epsilon$],
    [`epsilon`],
    [$rho.alt$],
    [`rho.alt`],

    [$zeta$],
    [`zeta`],
    [$sigma$, $Sigma$],
    [`sigma`, `Sigma`],

    [$eta$],
    [`eta`],
    [$sigma.alt$],
    [`sigma.alt`],

    [$theta$, $Theta$],
    [`theta`, `Theta`],
    [$tau$],
    [`tau`],

    [$theta.alt$],
    [`theta.alt`],
    [$upsilon$, $Upsilon$],
    [`upsilon`, `Upsilon`],

    [$iota$],
    [`iota`],
    [$phi.alt$, $Phi$],
    [`phi.alt`, `Phi`],

    [$kappa$],
    [`kappa`],
    [$phi$],
    [`phi`],

    [$lambda$, $Lambda$],
    [`lambda`, `Lambda`],
    [$chi$],
    [`chi`],

    [$mu$],
    [`mu`],
    [$psi$, $Psi$],
    [`psi`, `Psi`],

    [$nu$],
    [`nu`],
    [$omega$, $Omega$],
    [`omega`, `Omega`],
  ),
)
