tests/snapshots/assets__check_file@unit-grid-extra-arg.typ-0.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/grid/extra-arg.typ
---
#grid(
  columns: 2,
)[
  abc
][
  def
]

#table(
  columns: (
    auto,
    1fr,
    auto,
  ),
  gutter: 3pt,
  [Name],
  [Age],
  [Strength],

  [Hannes],
  [36],
  [Grace],

  [Irma],
  [50],
  [Resourcefulness],

  [Vikram],
  [49],
  [Perseverance],
)[123][
  456
][789]
